hero on index page

--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -21,8 +21,8 @@
   <div class="container mx-auto px-4">
     <body class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal">
 
-        {{>navbar}}
-
+      {{>navbar}}
+      {{>hero}}
       <div class="w-full m-0 p-0 bg-cover bg-bottom" style="background-image:url('/images/luxurystore.jpg'); height: 60vh; max-height:460px;"></div>
 
         <section class="bg-white py-8">
