--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -18,7 +18,7 @@
     <!--Replace with your tailwind.css once created-->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet"
 </head>
-  <div class="container mx-auto px-4">
+  <div class="container mx-auto">
     <body class="bg-white text-gray-600 work-sans leading-normal text-base tracking-normal">
 
       {{>navbar}}
