--- a/partials/hero.hbs
+++ b/partials/hero.hbs
@@ -9,7 +9,7 @@
                     </div>
 				</div>
             </div>
-            <div class="col-12 col-lg-6 heroBanner-container-bg svg-animate ml-auto">
+            <div class="col-12 col-lg-6 heroBanner-container-bg svg-animate ml-auto">test text
             </div>
         </div>
     </section>
