--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -23,7 +23,7 @@
 
       {{>navbar}}
       {{>hero}}
-      <div class="w-full m-0 p-0 bg-cover bg-bottom" style="background-image:url('/images/luxurystore.jpg'); height: 60vh; max-height:460px;"></div>
+      <!-- <div class="w-full m-0 p-0 bg-cover bg-bottom" style="background-image:url('/images/luxurystore.jpg'); height: 60vh; max-height:460px;"></div> -->
 
         <section class="bg-white py-8">
             <div class="container py-8 px-6 mx-auto">
