locations on index page

--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -35,7 +35,9 @@
                 <p class="mb-8">Browse through our site for luxury shoes, tops, and bottoms!</p>
             </div>
         </section>
-
+        <div class="locations-container">
+          {{>locations-entities}}
+        </div>
         {{>image-banners}}
 
       {{>footer}}
