location address added

--- a/partials/locations-entities.hbs
+++ b/partials/locations-entities.hbs
@@ -14,11 +14,12 @@
         "price",
         "color",
         "brand",
-        "photoGallery"
+        "photoGallery",
+        "address"
       ],
       "filter": {
         "entityTypes": [
-          "product"
+          "locations"
         ]
       }
     }
@@ -26,3 +27,6 @@
 ---
 
 <div>Yaaa huuuu</div>
+<ul>
+    <li>{{address}}</li>
+</ul>
