location entities updates1

--- a/partials/locations-entities.hbs
+++ b/partials/locations-entities.hbs
@@ -1,7 +1,7 @@
 ---
 {
     "stream": {
-        "$id": "products",
+        "$id": "locations",
         "source": "knowledgeGraph",
         "destination": "pages",
       "fields": [
