--- a/partials/locations-entities.hbs
+++ b/partials/locations-entities.hbs
@@ -6,15 +6,6 @@
         "destination": "pages",
       "fields": [
         "id",
-        "uid",
-        "meta",
-        "richTextDescription",
-        "name",
-        "slug",
-        "price",
-        "color",
-        "brand",
-        "photoGallery",
         "address"
       ],
       "filter": {
@@ -28,5 +19,5 @@
 
 <div>Yaaa huuuu</div>
 <ul>
-    <li>{{address}}</li>
+    <li>-----------{{address}}</li>
 </ul>
