--- a/templates/product.hbs
+++ b/templates/product.hbs
@@ -92,7 +92,7 @@
                         ${{this.price.value}} 
                     </div>
                     <p class="mt-8 mb-8 text-l">{{convertRTFToHTML this.richTextDescription}}</p>
-                    <p class="mt-8 text-l"><b>Color:</b> {{this.color}}</p>
+                    <p class="mt-8 text-l"><b>Color:-------------</b> {{this.color}}</p>
                 </div>
             </div>
         </div>
