--- a/templates/product.hbs
+++ b/templates/product.hbs
@@ -66,7 +66,7 @@
                             ${{price.value}} 
                         </div>
                         <p class="mt-8 mb-8 text-xl">{{convertRTFToHTML richTextDescription}}</p>
-                        <p class="mt-8 text-xl"><b>Color:</b> {{color}}</p>
+                        <p class="mt-8 text-xl"><b>ColorRRRRRRR:</b> {{color}}</p>
                     </div>
                 </div>
             </div>
