--- a/templates/productCategory.hbs
+++ b/templates/productCategory.hbs
@@ -71,7 +71,7 @@
                       ${{price.value}} 
                   </div>
                   <p class="mt-8 mb-8 text-l">{{convertRTFToHTML richTextDescription}}</p>
-                  <p class="mt-8 text-l"><b>Color:</b> {{color}}</p>
+                  <p class="mt-8 text-l"><b>ColorBBBBBBBB:</b> {{color}}</p>
               </div>
           </div>
       </div>
