--- a/partials/locations-entities.hbs
+++ b/partials/locations-entities.hbs
@@ -6,6 +6,7 @@
         "destination": "pages",
       "fields": [
         "id",
+        "name",
         "address"
       ],
       "filter": {
@@ -19,5 +20,5 @@
 
 <div>Yaaa huuuu</div>
 <ul>
-    <li>-----------{{address}}</li>
+    <li>Pappu you are here {{name}} {{address}}</li>
 </ul>
