--- a/partials/locations-entities.hbs
+++ b/partials/locations-entities.hbs
@@ -20,5 +20,5 @@
 
 <div>Yaaa huuuu</div>
 <ul>
-    <li>Pappu you are here {{name}} {{address}}</li>
+    <li>Pappu you are here {{name}}</li>
 </ul>
