--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -58,16 +58,10 @@
           <div class="col-span-5">
               <div class="container py-8 px-6 mx-auto">
                   <div>
+                    <p>Position</p>
                     <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8 hover:text-blue-900" href={{slug}}>{{name}}</a>
                   </div>
-                  <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-600 text-xl mb-8 pt-6">
-                      {{brand}} 
-                  </div>
-                  <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-400 text-xl mb-8">
-                      ${{price.value}} 
-                  </div>
-                  <p class="mt-8 mb-8 text-l">{{convertRTFToHTML richTextDescription}}</p>
-                  <p class="mt-8 text-l"><b>ColorBBBBBBBB:</b> {{color}}</p>
+                  <p class="mt-8 mb-8 text-l">{{convertRTFToHTML description}}</p>
               </div>
           </div>
       </div>
