--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -46,7 +46,7 @@
       <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">Open Technology roles near {{name}}</div>
       <p class="mt-8 mb-8">{{convertRTFToHTML richTextDescription}}</p>
     </div>
-    <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10"></div>
+    <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
         {{#each c_relatedJobs}}
           <div class="col-span-5">
               <div class="container py-8 px-6 mx-auto">
