--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -37,7 +37,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet">
 </head>
 
-  <div class="container mx-auto px-4">
+  <div class="container mx-auto">
     <body>
         
     {{>navbar}}
@@ -46,9 +46,9 @@
       <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">Open Technology roles near {{name}}</div>
       <p class="mt-8 mb-8">{{convertRTFToHTML richTextDescription}}</p>
     </div>
-    <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
+    <div class="grid grid-cols-4 divide-gray-300 divide-y-4 gap-3 pl-10">
         {{#each c_relatedJobs}}
-          <div class="col-span-5">
+          <div class="col-span-1">
               <div class="container py-8 px-6 mx-auto">
                   <div>
                     <p>Position</p>
