--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -46,15 +46,15 @@
       <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">Open Technology roles near {{name}}</div>
       <p class="mt-8 mb-8">{{convertRTFToHTML richTextDescription}}</p>
     </div>
-    <div class="grid grid-cols-4 divide-gray-300 divide-y-4 gap-3 pl-10">
+    <div class="grid grid-cols-4 divide-gray-300 gap-3 pl-10">
         {{#each c_relatedJobs}}
-          <div class="col-span-1">
+          <div class="col-span-1 position-ent">
               <div class="container py-8 px-6 mx-auto">
                   <div>
                     <p>Position</p>
                     <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8 hover:text-blue-900" href={{slug}}>{{name}}</a>
                   </div>
-                  <p class="mt-8 mb-8 text-l">{{convertRTFToHTML description}}</p>
+                  <p class="mt-8 mb-8 text-l">{{description}}</p>
               </div>
           </div>
         {{/each}}
