--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -13,7 +13,7 @@
         "richTextDescription",
         "c_relatedJobs.name",
         "c_relatedJobs.slug",
-        "c_relatedJobs.richTextDescription"
+        "c_relatedJobs.description"
       ],
       "filter": {
         "entityTypes": [
