--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -13,7 +13,8 @@
         "richTextDescription",
         "c_relatedJobs.name",
         "c_relatedJobs.slug",
-        "c_relatedJobs.description"
+        "c_relatedJobs.description",
+        "c_relatedJobs.address"
       ],
       "filter": {
         "entityTypes": [
@@ -44,7 +45,7 @@
 
     <div class="container py-8 px-6 mx-auto">
       <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">Open Technology roles near {{name}}</div>
-      <p class="mt-8 mb-8">{{convertRTFToHTML richTextDescription}}</p>
+      <p class="mt-8 mb-8">Address {{address}}</p>
     </div>
     <div class="grid grid-cols-4 divide-gray-300 gap-3 pl-10">
         {{#each c_relatedJobs}}
