--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -10,11 +10,11 @@
         "meta",
         "name",
         "slug",
+        address,
         "richTextDescription",
         "c_relatedJobs.name",
         "c_relatedJobs.slug",
-        "c_relatedJobs.description",
-        "c_relatedJobs.address"
+        "c_relatedJobs.description"
       ],
       "filter": {
         "entityTypes": [
@@ -33,7 +33,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{name}}</title>
-    <meta name="description" content=Category page for {{name}}.>
+    <meta name="description" content="Category page for {{name}}.">
     {{>head}}
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet">
 </head>
