--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -10,7 +10,7 @@
         "meta",
         "name",
         "slug",
-        address,
+        "address",
         "richTextDescription",
         "c_relatedJobs.name",
         "c_relatedJobs.slug",
