--- a/templates/jobCategory.hbs
+++ b/templates/jobCategory.hbs
@@ -11,6 +11,7 @@
         "name",
         "slug",
         "address",
+        "c_technology",
         "richTextDescription",
         "c_relatedJobs.name",
         "c_relatedJobs.slug",
@@ -45,7 +46,7 @@
 
     <div class="container py-8 px-6 mx-auto">
       <div class="grid grid-cols-4">
-        <div class="col-span-3 tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">Open Technology roles near {{name}}</div>
+        <div class="col-span-3 tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">Open {{c_technology}} roles near {{name}}</div>
         <div class="mt-8 mb-8 col-span-1">Address {{address}}</div>
       </div>
     </div>
