updated global namespacing

--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -25,7 +25,7 @@
         <section class="bg-white py-8">
             <div class="container py-8 px-6 mx-auto">
                 <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8" href="#">About</a>
-                <p class="mt-8 mb-8 text-xl">{{global.name}} was founded in 2021, and is headquartered in New York, NY.</p>
+                <p class="mt-8 mb-8 text-xl">{{_repo.name}} was founded in 2021, and is headquartered in New York, NY.</p>
             </div>
         </section>
 
