--- a/templates/productCategory.hbs
+++ b/templates/productCategory.hbs
@@ -41,6 +41,7 @@
     <title>{{name}}</title>
     <meta name="description" content=Category page for {{name}}.>
     {{>head}}
+    {{>schema-productCategory}}
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet">
 </head>
 
