--- a/templates/about.hbs
+++ b/templates/about.hbs
@@ -1,34 +1,47 @@
 ---
 {
-    "urlFormat": "about.html"
+    "urlFormat": "about"
 }
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Us</title>
-    <meta name="description" content="About {{global.name}}">
-    {{>head}}
-    {{!-- <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet"> --}}
-    <!--Replace with your tailwind.css once created-->
-    <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet">
-</head>
-    <div class="container mx-auto px-4">
-        <body>
-            
-        {{>navbar}}
-
-        <section class="bg-white py-8">
-            <div class="container py-8 px-6 mx-auto">
-                <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8" href="#">About</a>
-                <p class="mt-8 mb-8 text-xl">{{_repo.name}} was founded in 2021, and is headquartered in New York, NY.</p>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>About Us</title>
+        <meta name="description" content="About {{global.name}}">
+        {{>head}}
+        {{!-- <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet"> --}}
+        <!--Replace with your tailwind.css once created-->
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:200,400&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <div class="w-full">
+            {{>navbar}}
+            <div class="centered-container">
+                <div class="section">
+                    <div class="grid gap-y-5 md:grid-cols-2 md:gap-x-5">
+                        <div>
+                            <a class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-xl mb-8" href="#">About</a>
+                            <p class="mt-8 mb-8 text-xl">{{_repo.name}} was founded in 2021, and is headquartered in New York, NY.</p>
+                        </div>
+                        <div>
+                            <img src="https://dynl.mktgcdn.com/p/QY7hr9T6L5sbqhBhRBOwpZG2xIoxILTtPWP32aavEzY/1560x878.jpg">
+                        </div>
+                    </div>
+                </div>
+                <div class="section">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
             </div>
-        </section>
+        </div>
+        <div class="w-full bg-gray-50">
+            <div class="centered-container">
+                {{>footer}}
+            </div>
+        </div>
+    </body> 
 
-        </body> 
-    </div>
 </html>
