--- a/templates/productCategory.hbs
+++ b/templates/productCategory.hbs
@@ -49,7 +49,7 @@
     <div class="w-full">
         {{>navbar}}
 		<div class="centered-container">
-			<div class="grid gap-y-10">
+			<div class="grid gap-y-3">
 				<div class="grid gap-y-3">
 					<div class="uppercase font-bold text-gray-800 text-2xl">
 						{{name}}
@@ -58,15 +58,15 @@
 						{{convertRTFToHTML richTextDescription}}
 					</p>
 				</div>
-				<div class="grid gap-x-5 gap-y-5 sm:grid-cols-2 lg:grid-cols-3 md:gap-x-5">
+				<div class="section grid gap-x-5 gap-y-5 sm:grid-cols-2 lg:grid-cols-3 md:gap-x-5">
 					{{#each c_relatedProducts}}
-						<div class="p-4 border-2 border-gray-50 rounded-xl justify-self-center hover:grow hover:shadow-lg">
+						<div class="p-4 border-2 border-gray-50 rounded-xl hover:grow hover:shadow-lg">
 							<a href={{slug}} class="grid gap-y-5">
-								<div class="">
+								<div class="justify-self-center">
 									<img class="rounded-xl object-contain sm:h-80 md:h-96" src="{{photoGallery.[0].image.url}}">
 								</div>
 								<div class="grid gap-y-2">
-									<div class="product-grid-title"}>{{name}}</div>
+									<div class="product-grid-title">{{name}}</div>
 									<div class="product-grid-subtitle">
 										{{this.brand}}
 									</div>
